[SCB-2474] (task 1) Java17 Test paas on foundation module